--- a/trae_config.yaml
+++ b/trae_config.yaml
@@ -14,64 +14,23 @@ agents:
 
 model_providers:  # 模型提供商配置
   doubao:
-    api_key: xxxxx
+    api_key: 21c10e1f-24d3-4af3-ae77-d1f77b323232
     provider: doubao
     base_url: https://ark.cn-beijing.volces.com/api/v3/
   ollama:
     api_key: "ssss"  # Ollama 通常不需要 API 密钥
     provider: ollama
     base_url: http://localhost:11434
-  anthropic:
-    api_key: your_anthropic_api_key
-    provider: anthropic
   openai:
     api_key: your_openai_api_key
     provider: openai
-  google:
-    api_key: your_google_api_key
-    provider: google
   openrouter:
     api_key: your_openrouter_api_key
     provider: openrouter
-
 models:
   trae_agent_model:
     model_provider: doubao
-    model: claude-3-5-sonnet-20241022
-    max_tokens: 4096
-    temperature: 0.5
-    top_p: 1.0
-    top_k: 1
-    parallel_tool_calls: true
-    max_retries: 3
-    supports_tool_calling: true
-
-  gpt4_model:
-    model_provider: openai
-    model: gpt-4o
-    max_tokens: 4096
-    temperature: 0.5
-    top_p: 1.0
-    top_k: 1
-    parallel_tool_calls: true
-    max_retries: 3
-    supports_tool_calling: true
-
-  gemini_model:
-    model_provider: google
-    model: gemini-2.0-flash-exp
-    max_tokens: 4096
-    temperature: 0.5
-    top_p: 1.0
-    top_k: 1
-    parallel_tool_calls: true
-    max_retries: 3
-    supports_tool_calling: true
-    candidate_count: 1
-
-  claude_sonnet_model:
-    model_provider: openrouter
-    model: anthropic/claude-3-5-sonnet
+    model: doubao-seed-1-6-thinking-250715
     max_tokens: 4096
     temperature: 0.5
     top_p: 1.0
